Fixing issue cannot type on mobile view

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,7 +6,6 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   -webkit-touch-callout: none;
-  -webkit-user-select: none; /* Disable selection/copy in UIWebView */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
